force-app/main/default/objects/CSUTMAssignment__c/CSUTMAssignment__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>UTM Assignment</label>
</CustomObject>