force-app/main/default/objects/CSUTMAssignment__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <inlineHelpText>Campaign_Name_UTM__c
Campaign_Source_UTM__c</inlineHelpText>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>