force-app/main/default/objects/CSUTMAssignment__c/fields/OwnerID__c.field-meta.xml
<CustomField>
    <fullName>OwnerID__c</fullName>
    <label>OwnerID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>